# case-studies-methodology

./: CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  pyproject.toml  seed.yaml
data/: aetheria-world-building.md  orchestration-governance.md  recursive-engine-architecture.md
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
src/: __init__.py  __main__.py  cross_reference.py  export.py  parser.py
tests/: test_cross_reference.py  test_export.py  test_parser.py
