[project]
name = "case-studies-methodology"
version = "0.1.0"
description = "Case study framework for documenting cross-organ patterns, methodologies, and evidence in the ORGAN system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["case-studies", "methodology", "documentation", "analysis"]

dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
